# CXX_GAME

./: .clangd  .gitmodules  CMakeLists.txt  conanfile.txt  renderdoc.sh
shader/: main.wgsl
src/: main.cpp
src-client/: CMakeLists.txt
src-client/include/client/: client.hpp
src-client/src/: main.cpp
src-client/src/client/: client.cpp  client.hpp  main.cpp
src-instancetree/: CMakeLists.txt  template.cxx
src-instancetree/src/instancetree/instancetypes/: baseInstance.hpp  basePart.cpp  basePart.hpp
src-renderer/: CMakeLists.txt
src-renderer/include/renderer/: buffer.hpp  instance.hpp  mesh.hpp  pipeline.hpp  renderer.hpp  shaderStructs.hpp  swapchain.hpp  window.hpp
src-renderer/src/renderer/: buffer.hpp  camera.cpp  camera.hpp  device.cpp  device.hpp  instance.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  utils.hpp  window.cpp  window.hpp
src/renderer/: buffer.cpp  buffer.hpp  device.cpp  device.hpp  instance.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
